[package]

name = "gearbox"
version = "0.0.1"
authors = ["Florian Hartwig <florian.j.hartwig@gmail.com>"]

[dependencies]
url = "*"
log = "*"
env_logger = "*"
rand = "*"
byteorder = "*"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"
features = ["nightly"]

[dependencies.rust-crypto]
git = "https://github.com/DaGenix/rust-crypto"

[dependencies.mio]
git = "https://github.com/carllerche/mio"

[dependencies.rustbox]
git = "https://github.com/gchp/rustbox.git"

[profile.dev]
debug = false

[profile.test]
debug = false

[dev-dependencies]
nix = "*"
